--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -1,1 +1,19 @@
-<p>calculadora works!</p>
+<div class="container">
+  <div class="content">
+    <input type="number" />
+    <select>
+      <option value="+">+</option>
+      <option value="-">-</option>
+      <option value="*">*</option>
+      <option value="/">/</option>
+      <option value="^">^</option>
+      <option value="%">%</option>
+    </select>
+    <input type="number" />
+    <button>Calcular</button>
+  </div>
+
+  <div>
+    <h2>Resultado:</h2>
+  </div>
+</div>
